--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "react-practice-otc",
   "scripts": {
     "test": "Jest",
-    "start-dev" : "parcel index.html",
-    "start-live" : "parcel build index.html"
-
+    "start-dev": "parcel index.html",
+    "start-live": "parcel build index.html"
   },
   "author": "Mohan",
   "license": "ISC",
@@ -16,7 +15,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0"
   },
   "browserslist": [
     "last 20 versions"
